<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.AboutMeActivity">

    <LinearLayout
        android:id="@+id/about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AboutMe"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/aboutme_background">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:src="@drawable/foto_formal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/primaryvariant">

                <TextView
                    android:text="@string/nama_aboutme"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:text="@string/mahasiswame"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/black"
            android:text="@string/emailme"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#46876c"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/contact_me"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/black"
            android:text="@string/kontakme"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#46876c"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/instagram"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/black"
            android:text="@string/instagramme"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#46876c"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/linkedin"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/black"
            android:text="@string/https_www_linkedin_com_in_muhammad_ismail_a0b636190"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#46876c"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp" />

    </LinearLayout>
</ScrollView>
