<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.DetailWisataActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="309dp"
            android:src="@color/gray"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TextContent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/nama_wisata"
            android:textSize="32sp" />

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:ellipsize="end"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/detail_wisata"
            android:id="@+id/tv_item_detail"
            android:textSize="16sp"
            android:maxLines="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_item_operasi"
            android:textSize="16sp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="18dp"
            android:text="@string/operasi_wisata"/>

        <Button
            android:id="@+id/btn_set_share"
            style="@style/ButtonGeneral"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_share"
            android:text="@string/share"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>
